fix overflow

--- a/todo-web/components/model/Model.module.css
+++ b/todo-web/components/model/Model.module.css
@@ -4,14 +4,36 @@
     left: 0;
     width: 100vw;
     height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
     background-color: rgba(19, 19, 19, 0.82);
     z-index: 10;
 }
 
+.container::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: rgba(245, 245, 245, 0);
+}
+
+.container::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    background-color: rgba(245, 245, 245, 0);
+}
+
+.container::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
+}
+
 .innerContainer {
     max-width: 750px;
+    height: max-content;
+    overflow: auto;
     width: 90vw;
-    margin: 20vh auto;
+    margin: 30px auto;
     padding: 10px;
     border: 1px solid white;
     border-radius: 5px;
